force-app/main/default/objects/BigTest__c.object
<CustomObject>
    <fields>
        <fullName>Currency01__c</fullName>
        <label>Currency 01</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency02__c</fullName>
        <label>Currency 02</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency03__c</fullName>
        <label>Currency 03</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date01__c</fullName>
        <label>Date 01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date02__c</fullName>
        <label>Date 02</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date03__c</fullName>
        <label>Date 03</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTime01__c</fullName>
        <label>DateTime 01</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime02__c</fullName>
        <label>DateTime 02</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime03__c</fullName>
        <label>DateTime 03</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email01__c</fullName>
        <label>Email 01</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email02__c</fullName>
        <label>Email 02</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email03__c</fullName>
        <label>Email 03</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Flag01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag 01</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag 02</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag 03</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongText01__c</fullName>
        <label>Long Text 01</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongText02__c</fullName>
        <label>Long Text 02</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongText03__c</fullName>
        <label>Long Text 03</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num01__c</fullName>
        <label>Number 01</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num02__c</fullName>
        <label>Number 02</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num03__c</fullName>
        <label>Number 03</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent01__c</fullName>
        <label>Percent 01</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent02__c</fullName>
        <label>Percent 02</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone01__c</fullName>
        <label>Phone 01</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone02__c</fullName>
        <label>Phone 02</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone03__c</fullName>
        <label>Phone 03</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist01__c</fullName>
        <label>Picklist 01</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist02__c</fullName>
        <label>Picklist 02</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist03__c</fullName>
        <label>Picklist 03</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text01__c</fullName>
        <label>Text 01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text02__c</fullName>
        <label>Text 02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text03__c</fullName>
        <label>Text 03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url01__c</fullName>
        <label>URL 01</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Url02__c</fullName>
        <label>URL 02</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Url03__c</fullName>
        <label>URL 03</label>
        <type>Url</type>
    </fields>
    <label>Big Test</label>
    <listViews>
        <fullName>All_Big_Tests</fullName>
        <filterScope>Everything</filterScope>
        <label>All Big Tests</label>
    </listViews>
    <nameField>
        <displayFormat>BT-{0000}</displayFormat>
        <label>Big Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>